# paraimage

./: .gitignore  LICENSE  PRD.md  README.md  README_EN.md  main.py  package-lock.json  package.json  prompt-library.json  pyproject.toml
.github/workflows/: ci-release.yml
backend/: pyproject.toml
backend/src/: api.py  app_info.py  main.py  schemas.py  startup_log.py  storage.py  utils.py
backend/src/providers/: __init__.py  aihubmix_provider.py  dashscope_provider.py  gemini_provider.py  openai_provider.py
backend/src/services/: generation.py  image_processing.py  image_saving.py  update.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: appSettings.ts  generate.ts  history.ts  imageProcessing.ts  imageSaving.ts  promptLibrary.ts  settings.ts  update.ts
frontend/src/components/: ChatHistoryModal.tsx  ChatWindowCard.tsx  ComposerPanel.tsx  ImageManagerModal.tsx  ImagePreviewModal.tsx  InputComposer.css  InputComposer.tsx  PromptLibraryModal.tsx  SettingsModal.tsx  Sidebar.tsx
frontend/src/data/: models.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/types/: chat.ts  image.ts  layout.ts  provider.ts
frontend/src/utils/: lobeIcons.ts
scripts/: build_package.py
scripts/installer/macos/: create_dmg.sh
scripts/installer/windows/: ParaImage.nsi
